feat: likes functionality implementation
